# RATELProf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  install.sh  logfile.txt  output.json  ratelprof.sh  sett.config  sett_install.lua  sett_install.sh  test.json
share/ratelinfo/: CMakeLists.txt
share/ratelinfo/src/: get_agent_info.c  ratelinfo_agents_query.c  ratelinfo_agents_query.h
src/core/: CMakeLists.txt  plugin.h  ratelprof.c  ratelprof.h  tool.c
src/core/autogen/hip_domain/: hip_functions.c  hip_profiled_functions.c  hip_profiled_functions.h
src/core/autogen/hsa_domain/: hsa_functions.c  hsa_profiled_functions.c  hsa_profiled_functions.h
src/core/autogen/omp_tgt_domain/: omp_tgt_profiled_functions.c  omp_tgt_profiled_functions.h
src/core/autogen/omp_tgt_rtl_domain/: omp_tgt_rtl_profiled_functions.c  omp_tgt_rtl_profiled_functions.h
src/core/common/: api_callback_manager.c  api_callback_manager.h  api_table_manager.c  api_table_manager.h  env.c  env.h  id_system.c  id_system.h  logger.h  ratelprof_time.c  ratelprof_time.h
src/core/include/: ratelprof.h  ratelprof_domain.h
src/core/include/domains/: hip_api_helper.h  hsa_api_helper.h  mpi_api_helper.h  omp_routine_api_helper.h  omp_tgt_api_helper.h  omp_tgt_rtl_api_helper.h
src/core/include/ratelprof/: ratelprof_api_table.h  ratelprof_callback.h  ratelprof_id_system.h  ratelprof_lifecycle.h  ratelprof_source_location.h  ratelprof_status.h  ratelprof_time.h
src/core/include/utils/: demangle.h  env.h  logger.h  macro.h  ratelprof_macro.h  utils.h
src/core/mangen/gpu_domain/: gpu_functions.c  gpu_functions.h
src/core/mangen/gpu_ratelprof/: gpu_functions.c  gpu_functions.h
src/core/ratelprof/: api_callback_manager.c  api_callback_manager.h  api_table_manager.c  ratelprof_lifecycle.c  ratelprof_lifecycle.h  ratelprof_status.h
src/core/ratelprof_ext/: main_trace.c  main_trace.h  profiling_trace.c  profiling_trace.h  ratelprof_activity_pool.c  ratelprof_activity_pool.h  ratelprof_ext.c  ratelprof_ext.h  ratelprof_object_tracking.c  ratelprof_object_tracking.h
src/core/ratelprof_ext/gpu_support/: gpu_support.h  hsa_gpu_wrapper.c  omp_support.h
src/core/ratelprof_ext/memory_manager/: ratelprof_buffer_manager.c  ratelprof_buffer_manager.h  ratelprof_hash_table.c  ratelprof_hash_table.h  ratelprof_queue.c  ratelprof_queue.h
src/core/ratelprof_ext/profiling_domain/: profiling_trace.c  profiling_trace.h
src/core/src/: ratelprof.c  ratelprof_domain.c
src/core/src/domains/: hip_profiled_functions.c  hsa_profiled_functions.c  mpi_profiled_functions.c  omp_routine_profiled_functions.c  omp_tgt_profiled_functions.c  omp_tgt_rtl_profiled_functions.c
src/core/src/ratelprof/: ratelprof_api_table.c  ratelprof_callback.c  ratelprof_id_system.c  ratelprof_lifecycle.c  ratelprof_source_location.c  ratelprof_time.c
src/core/src/utils/: demangle.c  env.c  logger.c
src/core/tools/: plugin.h  tool.c
src/core/utils/: api_callback_manager.c  api_callback_manager.h  api_table_manager.c  api_table_manager.h  env.c  logger.c  utils.h
src/core/wrapper/: dlsym_wrappers.c  hip_wrappers.c  hsa_wrappers.c  omp_tgt_wrappers.c
src/ext/: CMakeLists.txt
src/ext/include/: ratelprof_ext.h  ratelprof_internal.h
src/ext/include/domains/: gpu_hsa_api_helper.h  gpu_hsa_profiled_function.h  ompt_api_helper.h  profiling_hsa_api_helper.h  profiling_trace.h  roctx_api_helper.h
src/ext/include/ratelprof_ext/: ratelprof_activity_pool.h  ratelprof_ext_status.h  ratelprof_gpu_profiling.h  ratelprof_object_tracking.h  ratelprof_ompt.h
src/ext/include/utils/: mpi_helper.h
src/ext/src/: ratelprof_ext.c
src/ext/src/domains/: gpu_hsa_profiled_function.c  gpu_hsa_traced_functions.c  ompt_traced_functions.c  prof_hsa_traced_functions.c  profiling_trace.c  roctx_traced_functions.c
src/ext/src/ratelprof_ext/: ratelprof_activity_pool.c  ratelprof_object_tracking.c  ratelprof_ompt.c
src/lua/: CMakeLists.txt  demangle.c  msgpack_decoder.c  msgpack_encoder.c  ratelprof_agent_query.c  ratelprof_agent_query.h
src/lua/include/: lua_compatibility.h
src/lua/msgpack/: msgpack_decoder.c  msgpack_decoder.h  msgpack_encoder.c
src/plugins/: CMakeLists.txt  activity_plugin.c  activity_plugin.h  plugin.c
src/plugins/include/: activity_plugin.h  hip_plugin.h  hsa_plugin.h  mpi_plugin.h  omp_routine_plugin.h  omp_tgt_plugin.h  omp_tgt_rtl_plugin.h  ompt_plugin.h
src/plugins/json/hip_domain/: hip_plugin.c  hip_plugin.h
src/plugins/json/hsa_domain/: hsa_plugin.c  hsa_plugin.h
src/plugins/json/omp_tgt_domain/: omp_tgt_plugin.c  omp_tgt_plugin.h
src/plugins/json/omp_tgt_rtl_domain/: omp_tgt_rtl_plugin.c  omp_tgt_rtl_plugin.h
src/plugins/json_dyn/hip_domain/: hip_plugin.c  hip_plugin.h
src/plugins/json_dyn/hsa_domain/: hsa_plugin.c  hsa_plugin.h
src/plugins/json_dyn/omp_tgt_domain/: omp_tgt_plugin.c  omp_tgt_plugin.h
src/plugins/json_dyn/omp_tgt_rtl_domain/: omp_tgt_rtl_plugin.c  omp_tgt_rtl_plugin.h
src/plugins/memory_structure/: msgpack.c  msgpack.h
src/plugins/plugin_json/: CMakeLists.txt  hip_plugin.c  hip_plugin.h  hsa_plugin.c  hsa_plugin.h  omp_tgt_rtl_plugin.c  omp_tgt_rtl_plugin.h
src/plugins/plugin_json_dyn/: hip_plugin.c  hip_plugin.h  hsa_plugin.c  hsa_plugin.h  omp_tgt_rtl_plugin.c  omp_tgt_rtl_plugin.h
src/plugins/plugin_stdout/: CMakeLists.txt  hip_plugin.c  hip_plugin.h  hsa_plugin.c  hsa_plugin.h  omp_tgt_rtl_plugin.c  omp_tgt_rtl_plugin.h
src/plugins/src/: activity_plugin.c  plugin.c
src/plugins/src/json/: activity_plugin.c  hip_plugin.c  hsa_plugin.c  omp_routine_plugin.c  omp_tgt_plugin.c  omp_tgt_rtl_plugin.c  ompt_plugin.c  plugin.c
src/plugins/src/json_dyn/: activity_plugin.c  hip_plugin.c  hsa_plugin.c  omp_routine_plugin.c  (+4 more)
src/tools/: CMakeLists.txt  plugin.h  tool.c  version.h
src/wrappers/: CMakeLists.txt  dlsym_wrapper.c  hip_wrapper.c  hsa_wrapper.c  main_wrapper.c  mpi_wrapper.c  omp_routine_wrapper.c  omp_tgt_rtl_wrapper.c  roctx_wrapper.c
src/wrappers/src/: dlsym_wrapper.c  hip_wrapper.c  hsa_wrapper.c  main_wrapper.c  omp_tgt_wrapper.c
(+328 files in other folders)
