CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(${CORE_PROJECT_NAME})

FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
)

FIND_LIBRARY(BFD_LIBRARY bfd)

IF (NOT BFD_LIBRARY)
    MESSAGE(FATAL_ERROR "libbfd not found. Please install binutils-dev.")
ENDIF()


IF (NOT BFD_INCLUDE_DIR)
    MESSAGE(FATAL_ERROR "BFD_INCLUDE_DIR not found. Please install binutils-dev or specify the path with ./install.sh -b path/to/bfd.h")
ENDIF()


ADD_LIBRARY(${PROJECT_NAME}-lib-dyn     SHARED ${SOURCES})
ADD_LIBRARY(${PROJECT_NAME}-lib-static  STATIC ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}-lib-dyn    ${BFD_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-lib-static ${BFD_LIBRARY})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-lib-dyn      PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-lib-static   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-lib-dyn    PRIVATE ${BFD_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-lib-static PRIVATE ${BFD_INCLUDE_DIR})

SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-dyn       PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-static    PROPERTIES OUTPUT_NAME ${PROJECT_NAME})