CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(${CORE_PROJECT_NAME})

FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
)

ADD_LIBRARY(${PROJECT_NAME}-lib-dyn     SHARED ${SOURCES})
ADD_LIBRARY(${PROJECT_NAME}-lib-static  STATIC ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-lib-dyn      PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-lib-static   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-dyn       PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-static    PROPERTIES OUTPUT_NAME ${PROJECT_NAME})