CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(${WRAPPER_PROJECT_NAME} VERSION 1.0.0 LANGUAGES C CXX)

SET(CMAKE_C_COMPILER ${ROCM_PATH}/bin/hipcc)
SET(CMAKE_CXX_COMPILER ${ROCM_PATH}/bin/hipcc)

FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
)

ADD_LIBRARY(${PROJECT_NAME}-lib-dyn     SHARED ${SOURCES})
ADD_LIBRARY(${PROJECT_NAME}-lib-static  STATIC ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}-lib-dyn       ${CORE_PROJECT_NAME}-lib-dyn    ${EXT_PROJECT_NAME}-lib-dyn)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-lib-static    ${CORE_PROJECT_NAME}-lib-static ${EXT_PROJECT_NAME}-lib-static)
# get_target_property(CORE_INCLUDE_DIR  ${CORE_PROJECT_NAME}-lib-dyn INTERFACE_INCLUDE_DIRECTORIES)
# get_target_property(EXT_INCLUDE_DIR   ${EXT_PROJECT_NAME}-lib-dyn  INTERFACE_INCLUDE_DIRECTORIES)
# target_include_directories(${PROJECT_NAME}-lib-dyn  PRIVATE ${CORE_INCLUDE_DIR} ${EXT_INCLUDE_DIR})

SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-dyn       PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-static    PROPERTIES OUTPUT_NAME ${PROJECT_NAME})