CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(${WRAPPER_PROJECT_NAME} VERSION 1.0.0 LANGUAGES C CXX)

#TODO: Find a way to avoid hipcc dependency

set(HIPCC_COMPILER "/opt/rocm/bin/hipcc" CACHE STRING "Path to HIPCC compiler")
SET(CMAKE_C_COMPILER    ${HIPCC_COMPILER})
SET(CMAKE_CXX_COMPILER  ${HIPCC_COMPILER})

FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
)

ADD_LIBRARY(${PROJECT_NAME}-lib-dyn     SHARED ${SOURCES})
ADD_LIBRARY(${PROJECT_NAME}-lib-static  STATIC ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}-lib-dyn       ${CORE_PROJECT_NAME}-lib-dyn    ${EXT_PROJECT_NAME}-lib-dyn)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-lib-static    ${CORE_PROJECT_NAME}-lib-static ${EXT_PROJECT_NAME}-lib-static)

SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-dyn       PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-lib-static    PROPERTIES OUTPUT_NAME ${PROJECT_NAME})